docs/api/qiskit/0.19/qiskit.transpiler.passes.EnlargeWithAncilla.mdx
---
title: EnlargeWithAncilla (v0.19)
description: API reference for qiskit.transpiler.passes.EnlargeWithAncilla in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.EnlargeWithAncilla
---

# EnlargeWithAncilla

<Class id="qiskit.transpiler.passes.EnlargeWithAncilla" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/layout/enlarge_with_ancilla.py" signature="EnlargeWithAncilla(*args, **kwargs)" modifiers="class">
  Extend the dag with virtual qubits that are in layout but not in the circuit yet.

  Extend the DAG circuit with new virtual qubits (ancilla) that are specified in the layout, but not present in the circuit. Which qubits to add are previously allocated in the `layout` property, by a previous pass.

  ## Attributes

  <span id="enlargewithancilla-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.EnlargeWithAncilla.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="enlargewithancilla-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.EnlargeWithAncilla.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="enlargewithancilla-name" />

  ### name

  <Function id="qiskit.transpiler.passes.EnlargeWithAncilla.name" signature="EnlargeWithAncilla.name()">
    Return the name of the pass.
  </Function>

  <span id="enlargewithancilla-run" />

  ### run

  <Function id="qiskit.transpiler.passes.EnlargeWithAncilla.run" signature="EnlargeWithAncilla.run(dag)">
    Run the EnlargeWithAncilla pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to extend.

    **Returns**

    An extended DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")

    **Raises**

    [**TranspilerError**](qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – If there is not layout in the property set or not set at init time.
  </Function>
</Class>

